src/objects/Credit_Bureau__c.object
<CustomObject>
    <description>This object holds all the data regarding an Applicant&apos;s Credit Bureau information</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether this is the active CBR for the related Application</description>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicant_First_Name_From_CBR__c</fullName>
        <description>Field holds the Applicant&apos;s First Name provided through the CBR. This field is different from the Applicant Name provided by the Applicant, since it&apos;s used to match the applicant-provided info with the CBR-provided info.</description>
        <encrypted>true</encrypted>
        <label>Applicant First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Last_Name__c</fullName>
        <description>Field holds the Applicant&apos;s Last Name provided through the CBR. This field is different from the Applicant Name provided by the Applicant, since it&apos;s used to match the applicant-provided info with the CBR-provided info.</description>
        <encrypted>true</encrypted>
        <label>Applicant Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will lookup the applicant name from the applicant object.</description>
        <inlineHelpText>Name of the applicant to whom the CBR belongs to.</inlineHelpText>
        <label>Applicant Name</label>
        <referenceTo>Applicant__c</referenceTo>
        <relationshipLabel>Credit Bureau</relationshipLabel>
        <relationshipName>Credit_Bureau</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field associates the CBR record to the appropriate Application record</description>
        <inlineHelpText>Application related to this CB report</inlineHelpText>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Credit Bureau</relationshipLabel>
        <relationshipName>Credit_Bureau</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bureau_Name__c</fullName>
        <description>This field is the description of the  name of credit Agency.</description>
        <inlineHelpText>Name Of The Credit Agency</inlineHelpText>
        <label>Bureau Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBR_Pulled_Date__c</fullName>
        <description>This Field Describes the Date and Time the CBR was Pulled</description>
        <inlineHelpText>Date and Time Of the CBR Pull.</inlineHelpText>
        <label>CBR Pulled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CBR_Request_Result__c</fullName>
        <label>CBR Request Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>No Records Found</fullName>
                </value>
                <value>
                    <fullName>Frozen File</fullName>
                </value>
                <value>
                    <fullName>Locked File</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CBR_Status__c</fullName>
        <description>This field describes the status of the CBR request. CBR can have the following status Completed, Submitted, Pending.</description>
        <inlineHelpText>Status of Applicant&apos;s CBR.(e.g. Completed, Submitted, Pending)</inlineHelpText>
        <label>CBR Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>This field will describe the applicants city found on the CBR.</description>
        <inlineHelpText>City (e.g. Herndon)</inlineHelpText>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Box to include any additional comments related to the CBR report</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Score__c</fullName>
        <description>This field will describe the applicants &quot;Credit Score&quot; found on the CBR.</description>
        <inlineHelpText>Credit Score # (850)</inlineHelpText>
        <label>Credit Score</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <description>This field is to capture the Error code from Experian</description>
        <label>Error Code</label>
        <length>1050</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associates the CB record to the corresponding Loan record</description>
        <inlineHelpText>Associates the CB record to the corresponding Loan record</inlineHelpText>
        <label>Loan</label>
        <referenceTo>Loan__c</referenceTo>
        <relationshipLabel>Credit Bureau</relationshipLabel>
        <relationshipName>Credit_Bureau</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <description>This field will describe the applicants address found on the CBR.Applicant&apos;s Most recent address on CBR</description>
        <inlineHelpText>Applicant&apos;s Most recent address on CBR (e.g 123 E Main St)</inlineHelpText>
        <label>Mailing Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_CBR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual CBR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Negative_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Negative Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_Type__c</fullName>
        <description>This field describes the type of the CBR pull(Initial or Manual). The CBR pull can be either automated or in case of froze credits a manual request to an applicant is made to release the hold from their credit so that the CBR can be obtained.</description>
        <inlineHelpText>How was the CBR requested (Initial or Manual)</inlineHelpText>
        <label>Requested Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <description>Field holds the Applicant&apos;s SSN provided through the CBR. This field is different from the SSN provided by the Applicant, since it&apos;s used to match the applicant-provided info with the CBR-provided info.</description>
        <encrypted>true</encrypted>
        <inlineHelpText>Social Security Number listed in the CBR</inlineHelpText>
        <label>SSN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Factor_Five__c</fullName>
        <label>Score Factor Five</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Factor_Four__c</fullName>
        <label>Score Factor Four</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Factor_One__c</fullName>
        <label>Score Factor One</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Factor_Six__c</fullName>
        <label>Score Factor Six</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Factor_Three__c</fullName>
        <label>Score Factor Three</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Factor_Two__c</fullName>
        <label>Score_Factor_Two</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>This field will describe the applicants &quot;State&quot; found on the CBR.</description>
        <inlineHelpText>State (e.g. Virginia)</inlineHelpText>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>This field will describe the applicants Zip-Code found on the CBR.</description>
        <inlineHelpText>Zip-Code (e.g. 12345-0000)</inlineHelpText>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Credit Bureau</label>
    <listViews>
        <fullName>ALL_Credit_Reports</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Applicant_Name__c</columns>
        <columns>CBR_Status__c</columns>
        <columns>Credit_Score__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>ALL Credit Reports</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Applicant_Name__c</columns>
        <columns>CBR_Status__c</columns>
        <columns>Credit_Score__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CBR_Pulled_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CBR-{00000000}</displayFormat>
        <label>Credit Bureau No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Bureau</pluralLabel>
    <recordTypes>
        <fullName>Credit_Bureau_Record_Type</fullName>
        <active>true</active>
        <description>Master RecordType For Credit Bureau</description>
        <label>Credit Bureau Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Read_Only</fullName>
        <active>true</active>
        <label>Read Only</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>